changes in the project layout

--- a/html/index.html
+++ b/html/index.html
@@ -12,25 +12,15 @@
     <!-- cabeçalho -->
     <header>
         <div id="divhead">
-            <nav id="navhead">
-                <a href="#" target="_blank">Home</a>
-                <a href="#" target="_blank">Membros</a>
-                <a href="#" target="_blank">Cadastro</a>
-            </nav>
-            <img src="../images/logorise.jpg"/>
-        </div>    
+            <img src="../images/logorise.jpg" />
+        </div>
     </header>
+
+        <a href="#" target="_blank">Home</a>&nbsp;&nbsp;&nbsp;
+        <a href="#" target="_blank">Membros</a>&nbsp;&nbsp;&nbsp;
+        <a href="#" target="_blank">Suporte</a>&nbsp;&nbsp;&nbsp;
+
     <!-- conteúdo -->
-    <div class="contentleft">
-        <section>
-            <article> </article>
-        </section>
-    </div>
-    <div class="contentright">
-        <section>
-            <article></article>
-        </section>
-    </div>
     <!-- rodapé -->
     <footer>rise e-sports</footer>
 </body>
