More changes in layout.

--- a/html/index.html
+++ b/html/index.html
@@ -11,16 +11,23 @@
 <body>
     <!-- cabeçalho -->
     <header>
-        <div id="divhead">
-            <img src="../images/logorise.jpg" />
-        </div>
+            <img src="../images/logorise.jpg"/>
     </header>
-
-        <a href="#" target="_blank">Home</a>&nbsp;&nbsp;&nbsp;
-        <a href="#" target="_blank">Membros</a>&nbsp;&nbsp;&nbsp;
-        <a href="#" target="_blank">Suporte</a>&nbsp;&nbsp;&nbsp;
-
+    <nav>
+        <a id="menu" href="#" target="_blank"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;
+        <a id="menu" href="#" target="_blank"><strong>Membros</strong></a>&nbsp;&nbsp;&nbsp;
+        <a id="menu" href="#" target="_blank"><strong>Suporte</strong></a>&nbsp;&nbsp;&nbsp;
+    </nav>    
     <!-- conteúdo -->
+    <section>
+        <p><strong>Links Videos</strong></p>
+        <ul>
+            <li><a id="sessao" href="https://www.youtube.com/watch?v=KOidEkU03UU">gogofx</a></li>
+            <li><a id="sessao" href="https://www.youtube.com/watch?v=R8pQLYmBVUU&t=46s">matias007</a></li>
+            <li><a id="sessao" href="https://www.youtube.com/watch?v=KsQYgaKe7bo">nipper</a></li>
+            <li><a id="sessao" href="https://www.youtube.com/watch?v=rKVkpoyKnTI">Se7eN</a></li>
+        </ul>
+    </section>
     <!-- rodapé -->
     <footer>rise e-sports</footer>
 </body>
