Addtions img and changes in layout again

--- a/html/index.html
+++ b/html/index.html
@@ -4,30 +4,39 @@
 <head lang="pt-br">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Rise E-sposts</title>
+    <title>RISE E-sports</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css">
 </head>
 
 <body>
     <!-- cabeçalho -->
     <header>
-            <img src="../images/logorise.jpg"/>
+        <img src="../images/logorise.jpg" />
+        <h1 id="title">Destinados a Ascenção</h1>
     </header>
     <nav>
         <a id="menu" href="#" target="_blank"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;
         <a id="menu" href="#" target="_blank"><strong>Membros</strong></a>&nbsp;&nbsp;&nbsp;
-        <a id="menu" href="#" target="_blank"><strong>Suporte</strong></a>&nbsp;&nbsp;&nbsp;
-    </nav>    
+        <a id="menu" href="#" target="_blank"><strong>Suporte</strong></a>&nbsp;&nbsp;&nbsp
+    </nav>
     <!-- conteúdo -->
     <section>
-        <p><strong>Links Videos</strong></p>
+        <h2 id="h2links"><strong>Jogadores</strong></h2><br>
         <ul>
-            <li><a id="sessao" href="https://www.youtube.com/watch?v=KOidEkU03UU">gogofx</a></li>
-            <li><a id="sessao" href="https://www.youtube.com/watch?v=R8pQLYmBVUU&t=46s">matias007</a></li>
-            <li><a id="sessao" href="https://www.youtube.com/watch?v=KsQYgaKe7bo">nipper</a></li>
-            <li><a id="sessao" href="https://www.youtube.com/watch?v=rKVkpoyKnTI">Se7eN</a></li>
+            <li><a id="sessao" target="_blank" href="https://www.youtube.com/watch?v=KOidEkU03UU">gogofx</a></li>
+            <br>
+            <li><a id="sessao" target="_blank" href="https://www.youtube.com/watch?v=R8pQLYmBVUU&t=46s">matias007</a>
+            </li>
+            <br>
+            <li><a id="sessao" target="_blank" href="https://www.youtube.com/watch?v=KsQYgaKe7bo">nipper</a></li>
+            <br>
+            <li><a id="sessao" target="_blank" href="https://www.youtube.com/watch?v=rKVkpoyKnTI">Se7eN</a></li>
         </ul>
     </section>
+    <div id="center">
+    </div>
+
+    <iframe id="iframe" src="https://youtu.be/rKVkpoyKnTI?list=PLq7Qe4bsprm7mHKSBKZ6QtDC6nz92f43y">Se7eN</iframe>
     <!-- rodapé -->
     <footer>rise e-sports</footer>
 </body>
